# msdfgen

./: .gitignore  .gitmodules  CMakeLists.txt  CompileAll.bat  msdfgen.sln
msdfgen-core/: msdfgen-core.vcxproj  msdfgen-core.vcxproj.filters
msdfgen-ext/: main.cpp  msdfgen-ext.vcxproj  msdfgen-ext.vcxproj.filters
